--- a/G1S1.BlazorServer/G1S1.BlazorServer.csproj
+++ b/G1S1.BlazorServer/G1S1.BlazorServer.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Pages\Books\Views\BooksView.razor.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MudBlazor" Version="5.1.3" />
   </ItemGroup>
 
