--- a/G1S1.BlazorServer.API/G1S1.BlazorServer.API.csproj
+++ b/G1S1.BlazorServer.API/G1S1.BlazorServer.API.csproj
@@ -5,19 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Pages\Books\Views\BooksView.razor.cs" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MudBlazor" Version="5.1.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\G1S1.BlazorServer.Data\G1S1.BlazorServer.Data.csproj" />
     <ProjectReference Include="..\G1S1.BlazorServer.Model\G1S1.BlazorServer.Model.csproj" />
   </ItemGroup>
 
