--- a/G1S1.BlazorServer/G1S1.BlazorServer.csproj
+++ b/G1S1.BlazorServer/G1S1.BlazorServer.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Pages\Books\Views\BooksView.razor.cs" />
+    <Compile Remove="Data\Book.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -14,7 +14,6 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
