--- a/G1S1.BlazorServer/G1S1.BlazorServer.csproj
+++ b/G1S1.BlazorServer/G1S1.BlazorServer.csproj
@@ -9,7 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MudBlazor" Version="5.1.3" />
+    <PackageReference Include="Blazored.FluentValidation" Version="2.0.1" />
+    <PackageReference Include="MudBlazor" Version="5.1.4" />
   </ItemGroup>
 
   <ItemGroup>
